--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "casual": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.5.3",
